@@ -184,11 +184,10 @@ class EclipseCParser implements CParser {
     IASTDeclaration[] declarations = ast.getDeclarations();
     if (declarations == null
         || declarations.length != 1
-        || !(declarations[0] instanceof IASTFunctionDefinition)) {
+        || !(declarations[0] instanceof IASTFunctionDefinition func)) {
       throw new CParserException("Not a single function: " + ast.getRawSignature());
     }
 
-    IASTFunctionDefinition func = (IASTFunctionDefinition) declarations[0];
     IASTStatement body = func.getBody();
     if (!(body instanceof IASTCompoundStatement iASTCompoundStatement)) {
       throw new CParserException(
@@ -325,7 +324,7 @@ class EclipseCParser implements CParser {
 
       // we don't need any file prefix if we only have one file
       if (asts.size() == 1) {
-        builder.analyzeTranslationUnit(asts.get(0), "", pScope);
+        builder.analyzeTranslationUnit(asts.getFirst(), "", pScope);
 
         // in case of several files we need to add a file prefix to global variables
         // as there could be several equally named files in different directories
